--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,24 +3,24 @@
     package="com.thesis.mygames">
 
     <application
-        android:name=".MyApplication"
+        android:name=".androidutils.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AboutAppActivity" />
-        <activity android:name=".TagActivity" />
-        <activity android:name=".MyGamesActivity" />
-        <activity android:name=".NavigationActivity">
+        <activity android:name=".activities.AboutAppActivity" />
+        <activity android:name=".activities.TagActivity" />
+        <activity android:name=".activities.MyGamesActivity" />
+        <activity android:name=".activities.NavigationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
+        <activity android:name=".activities.MainActivity" />
     </application>
 
 </manifest>
